Access time should only be set on accessing the data or messing with the contents, not on inode access rights and ownership changes. Should address PR kern/49033 for UDF.

Test results now come clean for bugs related to this issue in the ATF.